[build-system]
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "HaniAPI.version.__version__"}

[tool.setuptools]
packages = ['HaniAPI']

[project]
name = "HaniAPI"
description = "API for a certain site"
authors = [{name = "Kinuseka", email = "support@kinuseka.us"}]
readme = {file = 'README.md', content-type='text/markdown'}
license = {file = 'LICENSE'}
dynamic = ["version"]
requires-python = ">=3.6"
keywords = ["api", "webscraping", "python"]
classifiers = [
        'Development Status :: 4 - Beta',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'License :: OSI Approved :: Apache Software License',
        'Operating System :: OS Independent',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: POSIX :: Linux',
        'Operating System :: MacOS',
        'Intended Audience :: Developers',
        'Topic :: Internet :: WWW/HTTP',
        'Typing :: Typed'
]


dependencies = [
    "CFSession>=1.3.0",
    "beautifulsoup4>=4.10.0",
    "ffmpeg-python",
    "git+https://github.com/globocom/m3u8.git",
    "pycryptodome",
    "python-dateutil"
]

[project.urls]
homepage = "https://github.com/Kinuseka/HaniAPI"



